--- a/Index.html
+++ b/Index.html
@@ -75,7 +75,7 @@
 	</div>
 
 	<script src="biblio.js"></script>
-	<script src="script.js"></script>
+	<script src="scriptBiblio.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         loadBooks();
