--- a/1fi.html
+++ b/1fi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Articles :: Lettre aux Amis</title>
+  <title>1 Fi :: Cartes et plans</title>
   <link rel="stylesheet" type="text/css" href="styles0.4.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
 </head>
@@ -17,8 +17,8 @@
         </span>
         <img src="res/logo-amis-ile-noirmoutier.png">
         <span class="h1-text">
-          Articles</br>
-          Lettre aux Amis</br></br>
+          1 Fi</br>
+          Cartes et plans</br></br>
         </span>
       </h1>
     </div>
@@ -34,7 +34,7 @@
   </div>
 
   <!-- On inclut d'abord le script générant la variable arcDatabase -->
-  <script src="articles.js"></script>
+  <script src="1 Fi.js"></script>
   <!-- Puis notre script de génération dynamique -->
   <script src="mainScript.js"></script>
 </body>
