--- a/10fi.html
+++ b/10fi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Articles :: Lettre aux Amis</title>
+  <title>10 Fi :: Photographies</title>
   <link rel="stylesheet" type="text/css" href="styles0.4.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
 </head>
@@ -17,8 +17,8 @@
         </span>
         <img src="res/logo-amis-ile-noirmoutier.png">
         <span class="h1-text">
-          Articles</br>
-          Lettre aux Amis</br></br>
+          10 Fi</br>
+          Photographies</br></br>
         </span>
       </h1>
     </div>
@@ -32,7 +32,7 @@
       </tbody>
     </table>
   </div>
-  <script src="articles.js"></script>
+  <script src="10 Fi.js"></script>
   <script src="mainScript.js"></script>
 </body>
 </html>
