--- a/10fi.html
+++ b/10fi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>10 Fi :: Photographies</title>
-  <link rel="stylesheet" type="text/css" href="styles0.4.css">
+  <link rel="stylesheet" type="text/css" href="styles0.5.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
 </head>
 <body>
@@ -32,6 +32,9 @@
       </tbody>
     </table>
   </div>
+  <script>
+    const PATH_IMAGE = 'res/10 Fi/';
+  </script>
   <script src="10 Fi.js"></script>
   <script src="mainScript.js"></script>
 </body>
